# era-tue

./: CMakeLists.txt  README.md
include/era-tue/: kinect.h
include/era-tue/configuration/: data.h  emitter.h  parser.h  reader.h  writer.h
include/era-tue/geometry/: mesh.h  primitives.h  rasterizer.h
src/applications/wm/: localizer.cpp  localizer.h  main.cpp
src/applications/wm/configs/: kinect.yaml
src/components/: kinect.cpp
src/configuration/: emitter.cpp  parser.cpp
src/geometry/: primitives.cpp  rasterizer.cpp
test/: kinect.cpp  test_config.cpp  test_kinect.cpp  test_rasterizer.cpp
